--- a/ScreenRecognition.Desktop/Resources/Styles/MessageResult/MessageResultWindow.xaml
+++ b/ScreenRecognition.Desktop/Resources/Styles/MessageResult/MessageResultWindow.xaml
@@ -20,15 +20,18 @@
         MouseDoubleClick="resultWindow_MouseDoubleClick"
         MouseLeftButtonDown="resultWindow_MouseLeftButtonDown"
         MouseLeftButtonUp="resultWindow_MouseLeftButtonUp">
-    <TextBlock x:Name="result"
-               TextWrapping="Wrap"
-               TextAlignment="Left"
-               VerticalAlignment="Top"
-               HorizontalAlignment="Left"
-               FontWeight="Medium"
-               FontStyle="Normal"
-               FontSize="16"
-               Foreground="LightBlue"
-               Width="auto"
-               Height="auto"/>
+    <TextBox x:Name="result"
+             Background="Transparent"
+             TextWrapping="Wrap"
+             TextAlignment="Left"
+             BorderBrush="Transparent"
+             VerticalAlignment="Top"
+             HorizontalAlignment="Left"
+             FontWeight="Medium"
+             FontStyle="Normal"
+             FontSize="16"
+             IsReadOnly="True"
+             Foreground="LightBlue"
+             Width="auto"
+             Height="auto" />
 </Window>
