--- a/ScreenRecognition.Desktop/Resources/Styles/MessageResult/MessageResultWindow.xaml
+++ b/ScreenRecognition.Desktop/Resources/Styles/MessageResult/MessageResultWindow.xaml
@@ -31,15 +31,20 @@
         </Grid.RowDefinitions>
         <StackPanel Orientation="Horizontal"
                     Grid.Row="0"
-                    HorizontalAlignment="Left">
+                    HorizontalAlignment="Left"
+                    Margin="0 0 0 1">
             <TextBlock Text="Оригинал"
-                       Margin="5" />
+                       Margin="5"
+                       FontWeight="Medium"
+                       FontStyle="Normal" />
             <ToggleButton x:Name="switchTextButton"
                           Style="{StaticResource ToggleButtonSwitch}"
                           IsChecked="True"
                           Click="switchTextButton_Click" />
             <TextBlock Text="Перевод"
-                       Margin="5" />
+                       Margin="5"
+                       FontWeight="Medium"
+                       FontStyle="Normal" />
         </StackPanel>
         <TextBox x:Name="result"
                  Background="Transparent"
