--- a/ScreenRecognition.Desktop/Resources/Styles/MessageResult/MessageResultWindow.xaml
+++ b/ScreenRecognition.Desktop/Resources/Styles/MessageResult/MessageResultWindow.xaml
@@ -32,7 +32,8 @@
         <StackPanel Orientation="Horizontal"
                     Grid.Row="0"
                     HorizontalAlignment="Left"
-                    Margin="0 0 0 1">
+                    Margin="0 0 0 1"
+                    x:Name="topPanel">
             <TextBlock Text="Оригинал"
                        Margin="5"
                        FontWeight="Medium"
@@ -58,7 +59,7 @@
                  FontSize="16"
                  Foreground="LightBlue"
                  Width="auto"
-                 MinWidth="200"
+                 MinWidth="{Binding ElementName=topPanel, Path=ActualWidth}"
                  Height="auto"
                  IsReadOnly="True"
                  IsEnabled="False"
